--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First GitHub Website</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Professional Website</title>
+
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+nav {
+  background: #111;
+  padding: 15px 40px;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
+
+nav a {
+  color: white;
+  margin-left: 20px;
+  text-decoration: none;
+}
+
+.hero {
+  height: 90vh;
+  background: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+section {
+  padding: 60px 40px;
+}
+
+.box {
+  background: #eee;
+  padding: 20px;
+  margin: 10px 0;
+}
+</style>
+
 </head>
 <body>
 
-<h1>Hello World</h1>
-<p>This website is live using GitHub Pages.</p>
+<nav>
+  <h2>MyBrand</h2>
+  <div>
+    <a href="#">Home</a>
+    <a href="#">Services</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </div>
+</nav>
+
+<div class="hero">
+  <h1>Grow Your Business Online</h1>
+  <p>Professional Website Solutions</p>
+</div>
+
+<section>
+  <h2>Our Services</h2>
+  <div class="box">Web Design</div>
+  <div class="box">SEO Optimization</div>
+  <div class="box">Business Websites</div>
+</section>
+
+<section>
+  <h2>About Us</h2>
+  <p>We help businesses grow by building modern fast websites.</p>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <p>Email: contact@example.com</p>
+</section>
 
 </body>
 </html>
