--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Professional Website</title>
+<title>MyBrand | Professional Business Website</title>
+
+<meta name="description" content="Professional business website providing modern web solutions for companies and startups.">
+<meta name="keywords" content="business website, web design, professional website, digital services">
+<meta name="author" content="Aryan Gautam">
+
 
 <style>
 body {
@@ -44,6 +49,29 @@ section {
   padding: 20px;
   margin: 10px 0;
 }
+
+@media (max-width: 768px) {
+
+  nav {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  nav div {
+    margin-top: 10px;
+  }
+
+  .hero {
+    padding: 20px;
+    text-align: center;
+  }
+
+  section {
+    padding: 30px 20px;
+  }
+
+}
+
 </style>
 
 </head>
@@ -92,6 +120,9 @@ section {
   </form>
 </section>
 
+<footer style="background:#111;color:white;text-align:center;padding:20px;">
+<p>© 2026 MyBrand. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
