--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ section {
   </form>
 </section>
 
-<footer style="background:#111;color:black;text-align:center;padding:20px;">
+<footer style="background:#111;color:white;text-align:center;padding:20px;">
 <p>© 2026 MyBrand. All Rights Reserved.</p>
 </footer>
 
